--- a/src/app/features/foods/components/food-dialog/food-dialog.component.html
+++ b/src/app/features/foods/components/food-dialog/food-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{data?.id ? `Edit food` : `Add new food`}}</h2>
+<h2 mat-dialog-title>{{data.id ? `Edit food` : `Add new food`}}</h2>
 <mat-dialog-content class="!w-[30em]">
 	<div class="flex flex-col gap-2 w-full">
 		<input
@@ -36,6 +36,6 @@
 		type="button"
 		(click)="onSave()"
 		matButton>
-		{{data?.id ? `Edit` : `Add`}}
+		{{data.id ? `Edit` : `Add`}}
 	</button>
 </mat-dialog-actions>
