--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
-<mat-tab-group
-	class="px-6 pt-2"
-	[selectedIndex]="selectedIndex"
-	(selectedIndexChange)="onTabChange($event)">
-	<mat-tab label="Foods"></mat-tab>
-	<mat-tab label="Todos"></mat-tab>
-</mat-tab-group>
+<div
+	*ngIf="isLogged$ | async"
+	class="flex gap-5 items-center justify-between px-6 pt-2">
+	<mat-tab-group
+		class="w-full"
+		[selectedIndex]="selectedIndex"
+		(selectedIndexChange)="onTabChange($event)">
+		<mat-tab label="Foods"></mat-tab>
+		<mat-tab label="Todos"></mat-tab>
+	</mat-tab-group>
+	<button
+		(click)="logOut()"
+		type="button"
+		class="border w-[7em] py-3 border-gray-300 rounded font-medium cursor-pointer hover:bg-gray-200 duration-200 text-gray-700 hover:text-gray-900 hover:border-gray-500">
+		Log Out
+	</button>
+</div>
 
 <router-outlet></router-outlet>
