--- a/src/app/features/foods/components/food-table/food-table.component.html
+++ b/src/app/features/foods/components/food-table/food-table.component.html
@@ -12,78 +12,79 @@
 	<input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
 </mat-form-field>
 
-<div class="overflow-x-auto">
-	<div class="mat-elevation-z8 min-w-[728px]">
-		<table mat-table [dataSource]="dataSource" matSort>
-			<!-- ID Column -->
-			<ng-container matColumnDef="id">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-				<td mat-cell *matCellDef="let row">{{ row.id }}</td>
-			</ng-container>
+<div class="relative">
+	<!-- ✅ Table -->
+	<div class="overflow-x-auto" *ngIf="!isLoading; else loading">
+		<div class="mat-elevation-z8 min-w-[728px]">
+			<table mat-table [dataSource]="dataSource" matSort>
+				<!-- ID Column -->
+				<ng-container matColumnDef="id">
+					<th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+					<td mat-cell *matCellDef="let row">{{ row.id }}</td>
+				</ng-container>
 
-			<!-- Name Column -->
-			<ng-container matColumnDef="name">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-				<td mat-cell *matCellDef="let row">{{ row.name }}</td>
-			</ng-container>
+				<!-- Name Column -->
+				<ng-container matColumnDef="name">
+					<th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+					<td mat-cell *matCellDef="let row">{{ row.name }}</td>
+				</ng-container>
 
-			<!-- Progress Column -->
-			<ng-container matColumnDef="category">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-				<td mat-cell *matCellDef="let row">{{ row.category }}</td>
-			</ng-container>
+				<!-- Category Column -->
+				<ng-container matColumnDef="category">
+					<th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+					<td mat-cell *matCellDef="let row">{{ row.category }}</td>
+				</ng-container>
 
-			<!-- Fruit Column -->
-			<ng-container matColumnDef="calories">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Calories</th>
-				<td mat-cell *matCellDef="let row">{{ row.calories }}</td>
-			</ng-container>
+				<!-- Calories Column -->
+				<ng-container matColumnDef="calories">
+					<th mat-header-cell *matHeaderCellDef mat-sort-header>Calories</th>
+					<td mat-cell *matCellDef="let row">{{ row.calories }}</td>
+				</ng-container>
 
-			<!-- Fruit Column -->
-			<ng-container matColumnDef="price">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-				<td mat-cell *matCellDef="let row">{{ row.price }} $</td>
-			</ng-container>
+				<!-- Price Column -->
+				<ng-container matColumnDef="price">
+					<th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+					<td mat-cell *matCellDef="let row">{{ row.price }} $</td>
+				</ng-container>
 
-			<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-			<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+				<!-- Actions Column -->
+				<ng-container matColumnDef="actions">
+					<th mat-header-cell *matHeaderCellDef>Actions</th>
+					<td mat-cell *matCellDef="let element">
+						<div class="flex gap-3">
+							<button
+								class="border px-4 py-1 rounded cursor-pointer hover:bg-gray-200 border-gray-400"
+								type="button"
+								(click)="openEditDialog(element)">
+								edit
+							</button>
+							<button
+								class="border px-4 py-1 rounded cursor-pointer hover:bg-gray-200 border-gray-400"
+								type="button"
+								(click)="deleteFood(element)">
+								delete
+							</button>
+						</div>
+					</td>
+				</ng-container>
 
-			<!-- Row shown when there is no matching data. -->
-			<tr class="mat-row" *matNoDataRow>
-				<td class="mat-cell" colspan="4">
-					No data matching the filter "{{ input.value }}"
-				</td>
-			</tr>
+				<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+				<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+			</table>
 
-			<!-- ✅ Actions Column -->
-			<ng-container matColumnDef="actions">
-				<th mat-header-cell *matHeaderCellDef>Actions</th>
-				<td mat-cell *matCellDef="let element">
-					<div class="flex gap-3">
-						<button
-							class="border px-4 py-1 rounded cursor-pointer hover:bg-gray-200 border-gray-400"
-							type="button"
-							mat-icon-button
-							color="primary"
-							(click)="openEditDialog(element)">
-							<div>edit</div>
-						</button>
-						<button
-							class="border px-4 py-1 rounded cursor-pointer hover:bg-gray-200 border-gray-400"
-							type="button"
-							mat-icon-button
-							color="warn"
-							(click)="deleteFood(element)">
-							<div>delete</div>
-						</button>
-					</div>
-				</td>
-			</ng-container>
-		</table>
-
-		<mat-paginator
-			[pageSizeOptions]="[10, 25, 100]"
-			[pageSize]="10"
-			aria-label="Select page of users"></mat-paginator>
+			<mat-paginator
+				[pageSizeOptions]="[10, 25, 100]"
+				[pageSize]="10"
+				aria-label="Select page of users">
+			</mat-paginator>
+		</div>
 	</div>
+
+	<!-- ✅ Loading Template -->
+	<ng-template #loading>
+		<div class="flex justify-center items-center h-64">
+			<div
+				class="w-10 h-10 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
+		</div>
+	</ng-template>
 </div>
